# interference-tool-advance

./: .gitignore  CODIGO_COMPLETO.txt  README.md  parse_enm_topology.py  parse_kpi_excel.py  pyproject.toml  rules.yaml
.claude/: launch.json
interference-agents/: .env.example  README.md  main.py  requirements.txt
interference-agents/agents/: __init__.py  classifier_agent.py  mitigation_agent.py  test_agent.py  topology_agent.py
interference_advisor/: __init__.py  classifier.py  cli.py  engine.py  io.py  models.py  rules.py
tests/: test_classifier.py  test_engine.py
topology-explorer/: AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
topology-explorer/.claude/: launch.json
topology-explorer/api/: _tools.ts  chat.ts  investigate.ts  plan.ts  scout.ts
topology-explorer/dev-dist/: sw.js
topology-explorer/public/: kpi_data.json  style.json  topology.json
topology-explorer/scripts/: build-topology.ps1
topology-explorer/src/: App.tsx  classify.ts  geojson.ts  index.css  interference.ts  sampleTopology.ts  topoNormalize.ts  types.ts
topology-explorer/src/agents/: contracts.ts
topology-explorer/src/components/: CellAnalysisPanel.tsx  ChatBot.tsx  ComparePanel.tsx  InvestigatorPanel.tsx  KPIPanel.tsx  MapView.tsx  OnboardingGuide.tsx  PlannerPanel.tsx  ScoutPanel.tsx  Sidebar.tsx  SiteDrawer.tsx  StatCard.tsx
topology-explorer/src/hooks/: useInvestigator.ts  usePlanner.ts  useScout.ts  useToolExecutor.ts  useViewportTopology.ts
topology-explorer/src/services/: networkScanner.ts
(+6 files in other folders)
